Chaikin Oscillator indicator

--- a/Python/Yahoo Finance Algo Trading Weekly.ipynb
+++ b/Python/Yahoo Finance Algo Trading Weekly.ipynb
@@ -531,85 +531,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def Chaikin(df):\n",
+    "    \"\"\"\n",
+    "    Chaikin Oscillator\n",
+    "    \"\"\"\n",
+    "    ad = (2 * df['Close'] - df['High'] - df['Low']) / (df['High'] - df['Low']) * df['Volume']\n",
+    "    result = pd.Series(pd.ewma(ad, span=3, min_periods=2) - pd.ewma(ad, span=10, min_periods=9), name='Chaikin')\n",
+    "    return (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: pd.ewm_mean is deprecated for Series and will be removed in a future version, replace with \n",
+      "\tSeries.ewm(ignore_na=False,span=3,min_periods=2,adjust=True).mean()\n",
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: pd.ewm_mean is deprecated for Series and will be removed in a future version, replace with \n",
+      "\tSeries.ewm(ignore_na=False,span=10,min_periods=9,adjust=True).mean()\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "94          NaN\n",
-       "93          NaN\n",
-       "92          NaN\n",
-       "91          NaN\n",
-       "90          NaN\n",
-       "89          NaN\n",
-       "88          NaN\n",
-       "87          NaN\n",
-       "86          NaN\n",
-       "85          NaN\n",
-       "84          NaN\n",
-       "83          NaN\n",
-       "82          NaN\n",
-       "81          NaN\n",
-       "80          NaN\n",
-       "79     492576.0\n",
-       "78     100149.0\n",
-       "77    -344437.0\n",
-       "76    2155230.0\n",
-       "75    1073082.0\n",
-       "74     401700.0\n",
-       "73     106488.0\n",
-       "72   -1328564.0\n",
-       "71     159068.0\n",
-       "70     488400.0\n",
-       "69     557127.0\n",
-       "68    -705594.0\n",
-       "67    -343890.0\n",
-       "66    -786780.0\n",
-       "65     447392.0\n",
-       "        ...    \n",
-       "29    -329280.0\n",
-       "28    -955742.0\n",
-       "27    -756120.0\n",
-       "26    -723648.0\n",
-       "25     373407.0\n",
-       "24     -63736.0\n",
-       "23      24216.0\n",
-       "22     444100.0\n",
-       "21     -10540.0\n",
-       "20     115210.0\n",
-       "19      45416.0\n",
-       "18      22847.0\n",
-       "17     933294.0\n",
-       "16    -177990.0\n",
-       "15    1371030.0\n",
-       "14       1564.0\n",
-       "13    -468312.0\n",
-       "12     420544.0\n",
-       "11      85870.0\n",
-       "10   -1818895.0\n",
-       "9    -2167060.0\n",
-       "8     -659816.0\n",
-       "7    -1575700.0\n",
-       "6      597809.0\n",
-       "5     2140529.0\n",
-       "4    -1150782.0\n",
-       "3      274668.0\n",
-       "2     2783325.0\n",
-       "1    -1321920.0\n",
-       "0     6272112.0\n",
-       "Name: Force_15, dtype: float64"
+       "94             NaN\n",
+       "93             NaN\n",
+       "92             NaN\n",
+       "91             NaN\n",
+       "90             NaN\n",
+       "89             NaN\n",
+       "88             NaN\n",
+       "87             NaN\n",
+       "86    1.763192e+04\n",
+       "85   -4.829331e+04\n",
+       "84    2.965084e+04\n",
+       "83    3.429330e+05\n",
+       "82   -1.434003e+05\n",
+       "81    2.285105e+05\n",
+       "80    3.794864e+05\n",
+       "79    3.925783e+05\n",
+       "78    3.321831e+05\n",
+       "77    3.321831e+05\n",
+       "76    1.676678e+06\n",
+       "75   -7.375478e+03\n",
+       "74   -3.224619e+04\n",
+       "73   -3.143833e+05\n",
+       "72   -4.748163e+05\n",
+       "71   -2.176336e+05\n",
+       "70    8.254268e+04\n",
+       "69   -3.760703e+05\n",
+       "68   -9.822976e+04\n",
+       "67    2.766766e+05\n",
+       "66    2.312680e+05\n",
+       "65    4.950135e+04\n",
+       "          ...     \n",
+       "29    5.743974e+04\n",
+       "28    1.325001e+05\n",
+       "27   -1.749912e+05\n",
+       "26   -2.691898e+05\n",
+       "25   -9.501861e+05\n",
+       "24   -4.136504e+05\n",
+       "23   -5.677843e+05\n",
+       "22   -5.789175e+05\n",
+       "21   -4.368256e+05\n",
+       "20   -4.368256e+05\n",
+       "19    4.651861e+05\n",
+       "18    2.747362e+05\n",
+       "17    1.743570e+05\n",
+       "16    4.575313e+05\n",
+       "15    4.575313e+05\n",
+       "14    5.975339e+05\n",
+       "13    5.265705e+05\n",
+       "12    8.088631e+05\n",
+       "11   -7.873022e+04\n",
+       "10    1.030429e+05\n",
+       "9     1.030429e+05\n",
+       "8     6.008004e+05\n",
+       "7     1.426169e+05\n",
+       "6    -4.098702e+05\n",
+       "5    -7.673633e+04\n",
+       "4    -2.098308e+05\n",
+       "3    -1.745007e+05\n",
+       "2     5.623556e+05\n",
+       "1     2.258699e+05\n",
+       "0     4.475781e+04\n",
+       "Name: Chaikin, dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "FORCE(df_wege, n)"
+    "Chaikin(df_wege)"
    ]
   },
   {
