Accumulation/Distribution indicator

--- a/Python/Yahoo Finance Algo Trading Weekly.ipynb
+++ b/Python/Yahoo Finance Algo Trading Weekly.ipynb
@@ -548,95 +548,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: pd.ewm_mean is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.ewm(ignore_na=False,span=3,min_periods=2,adjust=True).mean()\n",
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:6: FutureWarning: pd.ewm_mean is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.ewm(ignore_na=False,span=10,min_periods=9,adjust=True).mean()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "94             NaN\n",
-       "93             NaN\n",
-       "92             NaN\n",
-       "91             NaN\n",
-       "90             NaN\n",
-       "89             NaN\n",
-       "88             NaN\n",
-       "87             NaN\n",
-       "86    1.763192e+04\n",
-       "85   -4.829331e+04\n",
-       "84    2.965084e+04\n",
-       "83    3.429330e+05\n",
-       "82   -1.434003e+05\n",
-       "81    2.285105e+05\n",
-       "80    3.794864e+05\n",
-       "79    3.925783e+05\n",
-       "78    3.321831e+05\n",
-       "77    3.321831e+05\n",
-       "76    1.676678e+06\n",
-       "75   -7.375478e+03\n",
-       "74   -3.224619e+04\n",
-       "73   -3.143833e+05\n",
-       "72   -4.748163e+05\n",
-       "71   -2.176336e+05\n",
-       "70    8.254268e+04\n",
-       "69   -3.760703e+05\n",
-       "68   -9.822976e+04\n",
-       "67    2.766766e+05\n",
-       "66    2.312680e+05\n",
-       "65    4.950135e+04\n",
-       "          ...     \n",
-       "29    5.743974e+04\n",
-       "28    1.325001e+05\n",
-       "27   -1.749912e+05\n",
-       "26   -2.691898e+05\n",
-       "25   -9.501861e+05\n",
-       "24   -4.136504e+05\n",
-       "23   -5.677843e+05\n",
-       "22   -5.789175e+05\n",
-       "21   -4.368256e+05\n",
-       "20   -4.368256e+05\n",
-       "19    4.651861e+05\n",
-       "18    2.747362e+05\n",
-       "17    1.743570e+05\n",
-       "16    4.575313e+05\n",
-       "15    4.575313e+05\n",
-       "14    5.975339e+05\n",
-       "13    5.265705e+05\n",
-       "12    8.088631e+05\n",
-       "11   -7.873022e+04\n",
-       "10    1.030429e+05\n",
-       "9     1.030429e+05\n",
-       "8     6.008004e+05\n",
-       "7     1.426169e+05\n",
-       "6    -4.098702e+05\n",
-       "5    -7.673633e+04\n",
-       "4    -2.098308e+05\n",
-       "3    -1.745007e+05\n",
-       "2     5.623556e+05\n",
-       "1     2.258699e+05\n",
-       "0     4.475781e+04\n",
-       "Name: Chaikin, dtype: float64"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Chaikin(df_wege)"
+    "def ACCDIST(df, n):\n",
+    "    \"\"\"\n",
+    "    Accumulation/Distribution\n",
+    "    \"\"\"\n",
+    "    ad = (2 * df['Close'] - df['High'] - df['Low']) / (df['High'] - df['Low']) * df['Volume']\n",
+    "    M = ad.diff(n - 1)\n",
+    "    N = ad.shift(n - 1)\n",
+    "    ROC = M / N\n",
+    "    result = pd.Series(ROC, name='Acc/Dist_ROC_' + str(n))\n",
+    "    return (result)"
    ]
   },
   {
@@ -647,6 +574,89 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94          NaN\n",
+       "93          NaN\n",
+       "92          NaN\n",
+       "91          NaN\n",
+       "90          NaN\n",
+       "89          NaN\n",
+       "88          NaN\n",
+       "87          NaN\n",
+       "86          NaN\n",
+       "85          NaN\n",
+       "84          NaN\n",
+       "83          NaN\n",
+       "82          NaN\n",
+       "81          NaN\n",
+       "80    -3.996252\n",
+       "79    -0.640965\n",
+       "78    -1.352555\n",
+       "77          NaN\n",
+       "76    19.410617\n",
+       "75     0.112271\n",
+       "74    -1.459931\n",
+       "73    -0.577128\n",
+       "72   -17.520611\n",
+       "71    -1.134320\n",
+       "70    -3.001784\n",
+       "69    -2.905915\n",
+       "68    -1.149739\n",
+       "67     0.921375\n",
+       "66    -0.235522\n",
+       "65    -1.000000\n",
+       "        ...    \n",
+       "29    -1.618629\n",
+       "28     0.037030\n",
+       "27    -2.364398\n",
+       "26    -0.612998\n",
+       "25     1.076325\n",
+       "24    -0.618646\n",
+       "23     0.235641\n",
+       "22     3.341009\n",
+       "21    -3.176159\n",
+       "20          NaN\n",
+       "19    -0.570136\n",
+       "18    -1.170548\n",
+       "17     1.788685\n",
+       "16    -2.581779\n",
+       "15          NaN\n",
+       "14     0.350377\n",
+       "13    -2.608924\n",
+       "12    -5.553475\n",
+       "11    -0.605956\n",
+       "10    -4.017792\n",
+       "9           NaN\n",
+       "8     -2.048718\n",
+       "7     -1.223889\n",
+       "6           NaN\n",
+       "5      0.182780\n",
+       "4     -0.222017\n",
+       "3     -0.866151\n",
+       "2      2.235360\n",
+       "1           NaN\n",
+       "0     -0.616651\n",
+       "Name: Acc/Dist_ROC_15, dtype: float64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ACCDIST(df_wege, n)"
+   ]
   }
  ],
  "metadata": {
