Money Flow Index and Ratio indicator

--- a/Python/Yahoo Finance Algo Trading Weekly.ipynb
+++ b/Python/Yahoo Finance Algo Trading Weekly.ipynb
@@ -919,6 +919,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 73,
    "metadata": {
     "collapsed": false
