On-balance Volume

--- a/Python/Yahoo Finance Algo Trading Weekly.ipynb
+++ b/Python/Yahoo Finance Algo Trading Weekly.ipynb
@@ -919,16 +919,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def MFI(df, n):\n",
+    "    \"\"\"\n",
+    "    Money Flow Index and Ratio\n",
+    "    \"\"\"\n",
+    "    PP = (df['High'] + df['Low'] + df['Close']) / 3\n",
+    "    i = 0\n",
+    "    PosMF = [0]\n",
+    "    while i < len(df) - 1:  # df.index[-1]:\n",
+    "        if PP[i + 1] > PP[i]:\n",
+    "            PosMF.append(PP[i + 1] * df.get_value(i + 1, 'Volume'))\n",
+    "        else:\n",
+    "            PosMF.append(0)\n",
+    "        i=i + 1\n",
+    "    PosMF = pd.Series(PosMF)\n",
+    "    TotMF = PP * df['Volume']\n",
+    "    MFR = pd.Series(PosMF / TotMF)\n",
+    "    result = pd.Series(pd.rolling_mean(MFR, n), name='MFI_' + str(n))\n",
+    "    return (result)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def OBV(df, n):\n",
+    "    \"\"\"\n",
+    "    On-balance Volume\n",
+    "    \"\"\"\n",
+    "    i = 0\n",
+    "    OBV = [0]\n",
+    "    while i < len(df) - 1:  # df.index[-1]:\n",
+    "        if df.get_value(i + 1, 'Close') - df.get_value(i, 'Close') > 0:\n",
+    "            OBV.append(df.get_value(i + 1, 'Volume'))\n",
+    "        if df.get_value(i + 1, 'Close') - df.get_value(i, 'Close') == 0:\n",
+    "            OBV.append(0)\n",
+    "        if df.get_value(i + 1, 'Close') - df.get_value(i, 'Close') < 0:\n",
+    "            OBV.append(-df.get_value(i + 1, 'Volume'))\n",
+    "        i = i + 1\n",
+    "    OBV = pd.Series(OBV)\n",
+    "    result = pd.Series(pd.rolling_mean(OBV, n), name='OBV_' + str(n))\n",
+    "    return (result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -937,86 +983,84 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:24: FutureWarning: pd.ewm_mean is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.ewm(ignore_na=False,span=15,min_periods=14,adjust=True).mean()\n",
-      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:25: FutureWarning: pd.ewm_mean is deprecated for Series and will be removed in a future version, replace with \n",
-      "\tSeries.ewm(ignore_na=False,span=15,min_periods=14,adjust=True).mean()\n"
+      "/usr/local/lib/python2.7/site-packages/ipykernel/__main__.py:16: FutureWarning: pd.rolling_mean is deprecated for Series and will be removed in a future version, replace with \n",
+      "\tSeries.rolling(window=15,center=False).mean()\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0          NaN\n",
-       "1          NaN\n",
-       "2          NaN\n",
-       "3          NaN\n",
-       "4          NaN\n",
-       "5          NaN\n",
-       "6          NaN\n",
-       "7          NaN\n",
-       "8          NaN\n",
-       "9          NaN\n",
-       "10         NaN\n",
-       "11         NaN\n",
-       "12         NaN\n",
-       "13    0.155471\n",
-       "14    0.150999\n",
-       "15    0.146193\n",
-       "16    0.125629\n",
-       "17    0.109922\n",
-       "18    0.202508\n",
-       "19    0.269326\n",
-       "20    0.269326\n",
-       "21    0.400529\n",
-       "22    0.502603\n",
-       "23    0.479286\n",
-       "24    0.479286\n",
-       "25    0.649293\n",
-       "26    0.715614\n",
-       "27    0.736143\n",
-       "28    0.736143\n",
-       "29    0.636173\n",
-       "        ...   \n",
-       "65    0.251457\n",
-       "66    0.246849\n",
-       "67    0.215286\n",
-       "68    0.254208\n",
-       "69    0.316226\n",
-       "70    0.241603\n",
-       "71    0.191852\n",
-       "72    0.184890\n",
-       "73    0.184890\n",
-       "74    0.163570\n",
-       "75    0.268704\n",
-       "76    0.174632\n",
-       "77    0.174632\n",
-       "78    0.146372\n",
-       "79    0.121530\n",
-       "80    0.107615\n",
-       "81    0.107615\n",
-       "82    0.230860\n",
-       "83    0.187463\n",
-       "84    0.178736\n",
-       "85    0.316849\n",
-       "86    0.390798\n",
-       "87    0.259640\n",
-       "88    0.342045\n",
-       "89    0.439994\n",
-       "90    0.426792\n",
-       "91    0.399399\n",
-       "92    0.507726\n",
-       "93    0.436496\n",
-       "94    0.353071\n",
-       "Name: RSI_15, dtype: float64"
+       "0               NaN\n",
+       "1               NaN\n",
+       "2               NaN\n",
+       "3               NaN\n",
+       "4               NaN\n",
+       "5               NaN\n",
+       "6               NaN\n",
+       "7               NaN\n",
+       "8               NaN\n",
+       "9               NaN\n",
+       "10              NaN\n",
+       "11              NaN\n",
+       "12              NaN\n",
+       "13              NaN\n",
+       "14   -787986.666667\n",
+       "15   -787986.666667\n",
+       "16   -700213.333333\n",
+       "17   -627446.666667\n",
+       "18   -426733.333333\n",
+       "19   -264166.666667\n",
+       "20   -264166.666667\n",
+       "21   -102466.666667\n",
+       "22    -42440.000000\n",
+       "23    -75266.666667\n",
+       "24    131120.000000\n",
+       "25    428893.333333\n",
+       "26    698180.000000\n",
+       "27    610566.666667\n",
+       "28    810473.333333\n",
+       "29    810166.666667\n",
+       "          ...      \n",
+       "65    131480.000000\n",
+       "66    274926.666667\n",
+       "67     17926.666667\n",
+       "68    -62006.666667\n",
+       "69   -148166.666667\n",
+       "70    -49966.666667\n",
+       "71    -74073.333333\n",
+       "72   -439933.333333\n",
+       "73   -461120.000000\n",
+       "74   -298233.333333\n",
+       "75   -164846.666667\n",
+       "76   -393826.666667\n",
+       "77   -579066.666667\n",
+       "78   -423453.333333\n",
+       "79   -393000.000000\n",
+       "80   -359106.666667\n",
+       "81   -415506.666667\n",
+       "82   -440980.000000\n",
+       "83   -212940.000000\n",
+       "84   -176880.000000\n",
+       "85   -275080.000000\n",
+       "86     23826.666667\n",
+       "87    -84186.666667\n",
+       "88    -94626.666667\n",
+       "89   -139260.000000\n",
+       "90   -264766.666667\n",
+       "91    -47066.666667\n",
+       "92     88006.666667\n",
+       "93    217446.666667\n",
+       "94     49420.000000\n",
+       "Name: OBV_15, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "RSI(df_wege, n)"
+    "OBV(df_wege, n)"
    ]
   },
   {
