FFNet pattern recognition

--- a/Python/FFNet.ipynb
+++ b/Python/FFNet.ipynb
@@ -843,6 +843,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pattern Recognition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "### Digits recognition example for ffnet ###\n",
+    "\n",
+    "# Training file (data/ocr.dat) contains 68 patterns - first 58\n",
+    "# are used for training and last 10 are used for testing.\n",
+    "# Each pattern contains 64 inputs which define 8x8 bitmap of\n",
+    "# the digit and last 10 numbers are the targets (10 targets for 10 digits).\n",
+    "# Layered network architecture is used here: (64, 10, 10, 10).\n",
+    "\n",
+    "from ffnet import ffnet, mlgraph, readdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Generate standard layered network architecture and create network\n",
+    "conec = mlgraph((64,10,10,10))\n",
+    "net = ffnet(conec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "READING DATA...\n"
+     ]
+    },
+    {
+     "ename": "IOError",
+     "evalue": "[Errno 2] No such file or directory: '/Volumes/PANZER/Github/learning-space/Datasets/03 - Clustering/ocr.dat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-282d6910cd6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Read data file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"READING DATA...\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreaddata\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0;34m'/Volumes/PANZER/Github/learning-space/Datasets/03 - Clustering/ocr.dat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdelimiter\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m' '\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0minput\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#first 64 columns - bitmap definition\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m64\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m#the rest - 10 columns for 10 digits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/ffnet/ffnet.pyc\u001b[0m in \u001b[0;36mreaddata\u001b[0;34m(filename, **kwargs)\u001b[0m\n\u001b[1;32m   1233\u001b[0m     \"\"\"\n\u001b[1;32m   1234\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mloadtxt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1235\u001b[0;31m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1236\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1237\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python2.7/site-packages/numpy/lib/npyio.pyc\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin)\u001b[0m\n\u001b[1;32m    856\u001b[0m                 \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbz2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBZ2File\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    857\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mversion_info\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 858\u001b[0;31m                 \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'U'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    859\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    860\u001b[0m                 \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: [Errno 2] No such file or directory: '/Volumes/PANZER/Github/learning-space/Datasets/03 - Clustering/ocr.dat'"
+     ]
+    }
+   ],
+   "source": [
+    "# Read data file\n",
+    "print \"READING DATA...\"\n",
+    "data = readdata( '/Volumes/PANZER/Github/learning-space/Datasets/03 - Clustering/ocr.dat', delimiter = ' ' )\n",
+    "input =  data[:, :64] #first 64 columns - bitmap definition\n",
+    "target = data[:, 64:] #the rest - 10 columns for 10 digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Train network with scipy tnc optimizer - 58 lines used for training\n",
+    "print \"TRAINING NETWORK...\"\n",
+    "net.train_tnc(input[:58], target[:58], maxfun = 2000, messages=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Test network - remaining 10 lines used for testing\n",
+    "print\n",
+    "print \"TESTING NETWORK...\"\n",
+    "output, regression = net.test(input[58:], target[58:], iprint = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "############################################################\n",
+    "# Make a plot of a chosen digit along with the network guess\n",
+    "try:\n",
+    "    from pylab import *\n",
+    "    from random import randint\n",
+    "\n",
+    "    digitpat = randint(58, 67) #Choose testing pattern to plot\n",
+    "\n",
+    "    subplot(211)\n",
+    "    imshow(input[digitpat].reshape(8,8), interpolation = 'nearest')\n",
+    "\n",
+    "    subplot(212)\n",
+    "    N = 10  # number of digits / network outputs\n",
+    "    ind = arange(N)   # the x locations for the groups\n",
+    "    width = 0.35       # the width of the bars\n",
+    "    bar(ind, net(input[digitpat]), width, color='b') #make a plot\n",
+    "    xticks(ind+width/2., ('1', '2', '3', '4', '5', '6', '7', '8', '9', '0'))\n",
+    "    xlim(-width,N-width)\n",
+    "    axhline(linewidth=1, color='black')\n",
+    "    title(\"Trained network (64-10-10-10) guesses a digit above...\")\n",
+    "    xlabel(\"Digit\")\n",
+    "    ylabel(\"Network outputs\")\n",
+    "    show()\n",
+    "except ImportError, e:\n",
+    "    print \"Cannot make plots. For plotting install matplotlib.\\n%s\" % e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
