--- a/Python/R and Python.ipynb
+++ b/Python/R and Python.ipynb
@@ -2,32 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: rpy2 in /usr/local/lib/python2.7/site-packages\r\n",
-      "Requirement already satisfied: six in /usr/local/lib/python2.7/site-packages (from rpy2)\r\n",
-      "Requirement already satisfied: singledispatch in /usr/local/lib/python2.7/site-packages (from rpy2)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install rpy2"
+    "!pip install rpy2 --upgrade\n",
+    "!pip install --upgrade pandas\n",
+    "!pip install singledispatch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from rpy2.rinterface import R_VERSION_BUILD\n",
+    "print(R_VERSION_BUILD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -38,45 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print \"Hello World!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['This', 'is', 'python!']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str_list = ['This', 'is', 'python!']\n",
     "str_list"
@@ -84,21 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is python!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Para cada elemento i dentro do range de 0 até o tamanho da string, faça o print do elemento i\n",
     "for i in range(0, len(str_list)):\n",
@@ -107,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -119,25 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I've been called 1 times!\n",
-      "I've been called 2 times!\n",
-      "I've been called 3 times!\n",
-      "I've been called 4 times!\n",
-      "I've been called 5 times!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i in range(0, 5):\n",
     "    my_function(i)"
@@ -156,62 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"Hello World!\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "R object with classes: ('character',) mapped to:\n",
-       "<StrVector - Python:0x10c547440 / R:0x7ff0f5c76d98>\n",
-       "[str]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r('print(\"Hello World!\")')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"This\"\n",
-      "[1] \"is\"\n",
-      "[1] \"R!\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "rpy2.rinterface.NULL"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r('str_list <- c(\"This\", \"is\", \"R!\")')\n",
     "r('for (i in 1:length(str_list)){print(str_list[i])}')"
@@ -219,39 +142,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I've been called 1 times!\n",
-      "I've been called 2 times!\n",
-      "I've been called 3 times!\n",
-      "I've been called 4 times!\n",
-      "I've been called 5 times!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "rpy2.rinterface.NULL"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "r('''\n",
     "    my_function <- function(i){\n",
     "        cat(\"I've been called\", i, \"times!\\n\")\n",
     "    }''')\n",
     "r('for (i in 1:5) {my_function(i)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from numpy import *\n",
+    "import scipy as sp\n",
+    "from pandas import *\n",
+    "from rpy2.robjects.packages import importr\n",
+    "import rpy2.robjects as ro\n",
+    "import pandas.rpy.common as com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Load dataset from R \n",
+    "ro.r('data(mtcars)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Load data and store inside some python object\n",
+    "pydf = com.load_data('mtcars')"
    ]
   },
   {
