--- a/R/survival-analysis.Rmd
+++ b/R/survival-analysis.Rmd
@@ -3,10 +3,381 @@ title: "Survival Analysis in R - Study Notebook"
 output: html_notebook
 ---
 
-This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
+This is a study notebook with contents of the book called "Analise de Sobrevivencia Aplicada			" authored by Enrico Antonio Colosimo and Suely Ruiz Giolo. All matherials of the book can be found in the [Mr. Colosimo website](http://www.est.ufmg.br/~enricoc/).
+
+*Códigos em R apresentados no Capítulo 2*
 
 ```{r}
-plot(cars)
+#  Exemplo Hepatite
+install.packages("survival")
+require(survival)
+tempos<- c(1,2,3,3,3,5,5,16,16,16,16,16,16,16,16,1,1,1,1,4,5,7,8,10,10,12,16,16,16)
+cens<-c(0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,1,1,1,1,0,0,0,0,0)
+grupos<-c(rep(1,15),rep(2,14))
+ekm<- survfit(Surv(tempos,cens)~grupos)
+summary(ekm)
+plot(ekm, lty=c(2,1), xlab="Tempo (semanas)",ylab="S(t) estimada")
+legend(1,0.3,lty=c(2,1),c("Controle","Esteróide"),lwd=1, bty="n")
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Cmd+Option+I*.
+
+```{r}
+#   IC sem transformação
+ekm<- survfit(Surv(tempos,cens)~grupos,conf.type="plain")
+summary(ekm)
+```
+
+```{r}
+#   IC transformação log-log
+ekm<- survfit(Surv(tempos,cens)~grupos,conf.type="log-log")
+summary(ekm)
+```
+
+```{r}
+#   IC transformação log (mesma do default)
+ekm<- survfit(Surv(tempos,cens)~grupos,conf.type="log")
+ekm<- survfit(Surv(tempos,cens)~grupos)
+summary(ekm)
+```
+
+
+
+```{r}
+#   Estimador de Nelson-Aalen
+require(survival)
+tempos<- c(1,2,3,3,3,5,5,16,16,16,16,16,16,16,16,1,1,1,1,4,5,7,8,10,10,12,16,16,16)
+cens<-c(0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,1,1,1,1,0,0,0,0,0)
+grupos<-c(rep(1,15),rep(2,14))
+ss<- survfit(coxph(Surv(tempos[grupos==2],cens[grupos==2])~1,method = "breslow"))
+summary(ss)
+racum<- -log(ss$surv)
+racum
+```
+
+
+```{r}
+#  Exemplo 2.5.1 - Tempo Médio de Vida
+require(survival)
+tempos<- c(3,4,5.7,6.5,6.5,8.4,10,10,12,15)
+cens<- c(1,0,0,1,1,0,1,0,1,1)
+ekm<- survfit(Surv(tempos,cens)~1,conf.type="log")
+summary(ekm)
+plot(ekm,conf.int=T,  xlab="Tempo (em meses)", ylab="S(t) estimada", bty="n")
+#
+t<- tempos[cens==1]
+tj<-c(0,as.numeric(levels(as.factor(t))))
+surv<-c(1,as.numeric(levels(as.factor(ekm$surv))))
+surv<-sort(surv, decreasing=T)
+k<-length(tj)-1
+prod<-matrix(0,k,1)
+for(j in 1:k){
+  prod[j]<-(tj[j+1]-tj[j])*surv[j]
+}
+tm<-sum(prod)
+tm
+```
+
+
+```{r}
+#   Comparação de Curvas de Sobrevivência
+require(survival)
+tempos<- c(1,2,3,3,3,5,5,16,16,16,16,16,16,16,16,1,1,1,1,4,5,7,8,10,10,12,16,16,16)
+cens<-c(0,0,1,1,0,0,0,0,0,0,0,0,0,0,0,1,1,1,0,0,1,1,1,1,0,0,0,0,0)
+grupos<-c(rep(1,15),rep(2,14))
+survdiff(Surv(tempos,cens)~grupos,rho=0)
+```
+
+```{r}
+#  Comparação de mais de duas curvas
+tempos<-c(7,8,8,8,8,12,12,17,18,22,30,30,30,30,30,30,8,8,9,10,10,14,
+          15,15,18,19,21,22,22,23,25,8,8,8,8,8,8,9,10,10,10,11,17,19)
+cens<-c(rep(1,10), rep(0,6),rep(1,15),rep(1,13))
+grupo<-c(rep(1,16), rep(2,15), rep(3,13))
+```
+
+```{r}
+require(survival)
+ekm<-survfit(Surv(tempos,cens)~grupo)
+summary(ekm)
+plot(ekm, lty=c(1,4,2), xlab="Tempo",ylab="S(t) estimada")
+legend(1,0.3,lty=c(1,4,2),c("Grupo 1","Grupo 2", "Grupo 3"),lwd=1,
+       bty="n",cex=0.8)
+survdiff(Surv(tempos,cens)~grupo,rho=0)
+survdiff(Surv(tempos[1:31],cens[1:31])~grupo[1:31],rho=0)
+survdiff(Surv(tempos[17:44],cens[17:44])~grupo[17:44],rho=0)
+survdiff(Surv(c(tempos[1:16],tempos[32:44]),c(cens[1:16],
+                                              cens[32:44]))~c(grupo[1:16],grupo[32:44]),rho=0)
+```
+
+
+
+*Códigos em R apresentados no Capítulo 3*
+```{r}
+#  Exemplo Câncer de Bexiga - Sem covariáveis
+require(survival)
+tempos<-c(3,5,6,7,8,9,10,10,12,15,15,18,19,20,22,25,28,30,40,45)
+cens<-c(1,1,1,1,1,1,1,0,1,1,0,1,1,1,1,1,1,1,1,0)
+ekm<-survfit(Surv(tempos,cens)~1)
+summary(ekm)
+plot(ekm, xlab="Tempo (meses)",ylab="S(t) estimada",conf.int=T,mark.time=T)
+````
+
+
+
+```{r}
+#   Estimativa do tempo mediano
+my.surv <- Surv(tempos, cens) 
+survfit(my.surv ~ 1)
+#  sem interpolar 18 (10;28)
+#  com interpolação 17,1 (9,5;27,8)
+#     Estimativa do tempo médio de vida (tau é 45 meses, maior observado) 
+```
+
+
+```{r}
+print(survfit(my.surv ~ 1), print.rmean=TRUE)
+#   18,7 (18.73 +/- 1.96*2.73) (13.4;24.1)
+```
+
+```{r}
+#   Ajuste dos modelos paramétricos
+#  Modelo Exponencial
+ajust1<-survreg(Surv(tempos,cens)~1,dist='exponential')
+summary(ajust1)
+``
+
+```{r}
+alpha<-exp(ajust1$coefficients[1])
+alpha
+```
+
+```{r}
+#    Modelo Weibull
+ajust2<-survreg(Surv(tempos,cens)~1,dist='weibull')
+summary(ajust2)
+```
+
+```{r}
+alpha<-exp(ajust2$coefficients[1])
+gama<-1/ajust2$scale
+cbind(gama, alpha)
+```
+
+```{r}
+#     Modelo Log-normal
+ajust3<-survreg(Surv(tempos,cens)~1,dist='lognorm')
+summary(ajust3)
+```
+
+```{r}
+sigma<-exp(ajust3$icoef[2])
+ajust3$scale
+```
+
+```{r}
+#  Gráficos de adequação dos modelos
+time<-ekm$time   # tempos de evento + último tempo
+st<-ekm$surv
+ste<- exp(-time/20.41)
+stw<- exp(-(time/21.34)^1.54)
+stln<- pnorm((-log(time)+ 2.72)/0.76)
+cbind(time,st,ste,stw,stln)
+```
+
+```{r}
+#  Gráfico de Kaplan-Meier vs Modelo Proposto
+par(mfrow=c(1,3))
+plot(st,ste,pch=16,ylim=range(c(0.0,1)), xlim=range(c(0,1)), xlab = "S(t): Kaplan-Meier",
+     ylab="S(t): exponencial")
+lines(c(0,1), c(0,1), type="l", lty=1)
+plot(st,stw,pch=16,ylim=range(c(0.0,1)), xlim=range(c(0,1)), xlab = "S(t): Kaplan-Meier",
+     ylab="S(t): Weibull")
+lines(c(0,1), c(0,1), type="l", lty=1)
+plot(st,stln,pch=16,ylim=range(c(0.0,1)), xlim=range(c(0,1)), xlab = "S(t): Kaplan-Meier",
+     ylab="S(t): log-normal")
+lines(c(0,1), c(0,1), type="l", lty=1)
+```
+
+
+```{r}
+#  Gráfico de Linearização
+par(mfrow=c(1,3))
+invst<-qnorm(st)
+plot(time, -log(st),pch=16,xlab="tempos",ylab="-log(S(t))")
+plot(log(time),log(-log(st)),pch=16,xlab="log(tempos)",ylab="log(-log(S(t)))")
+plot(log(time),invst, pch=16,xlab="log(tempos)", ylab=expression(Phi^-1 * (S(t))))
+```
+
+```{r}
+#   Teste da Razão de Verossimilhanças
+ajust1$loglik[2]
+ajust2$loglik[2]
+ajust3$loglik[2]
+```
+
+
+```{r}
+par(mfrow=c(1,2))
+plot(ekm, conf.int=F, xlab="Tempos", ylab="S(t)")
+lines(c(0,time),c(1,stw), lty=2)
+legend(25,0.8,lty=c(1,2),c("Kaplan-Meier", "Weibull"),bty="n",cex=0.8)
+plot(ekm, conf.int=F, xlab="Tempos", ylab="S(t)")
+lines(c(0,time),c(1,stln), lty=2)
+legend(25,0.8,lty=c(1,2),c("Kaplan-Meier", "Log-normal"),bty="n",cex=0.8)
+```
+
+
+```{r}
+#  Gama generalizada: ajuste usando pacote "flexsurv" do software R
+install.packages("flexsurv")
+require(flexsurv)
+ajust4<-flexsurvreg(Surv(tempos,cens)~1,dist='gengamma')
+ajust4
+```
+
+```{r}
+ajust4$loglik
+#  -65.69074
+```
+
+```{r}
+# =============================================================================
+# Além do método delta para obtenção de var(tm) no caso do modelo Lognormal ou
+# outros modelos paramétricos, esta também pode ser obtida por meio do procedi-
+# mento conhecido por reamostragem bootstrap como segue.  
+# =============================================================================
+#
+# [A] Obtenção de var(tm) usando reamostragem bootstrap - Modelo lognormal  
+# =============================================================================
+tempos<-c(3,5,6,7,8,9,10,10,12,15,15,18,19,20,22,25,28,30,40,45)
+cens<-c(1,1,1,1,1,1,1,0,1,1,0,1,1,1,1,1,1,1,1,0)
+data<-as.data.frame(cbind(tempos,cens))
+# 
+d<-5000                             # numero de reamostragens bootstrap
+n<-length(tempos)                   # n = tamanho amostral 
+tmb<-matrix(0,d,1)                 # tempos médios das reamostragens 
+for(j in 1:d){
+  row<-sample(n, replace=T)        # reamostragem com reposição      
+  dados<-data[row,]
+  mod<-survreg(Surv(tempos,cens)~1,dist='lognorm', data=dados)
+  tmb[j]<-exp(mod$coef[1]+ (mod$scale^2/2))
+}
+```
+
+```{r}
+mean(tmb)
+```
+
+```{r}
+var(tmb)			     # var(tm) bootstrap	
+```
+
+```{r}
+hist(tmb, breaks=20)
+```
+
+```{r}
+### I.C.(tm)_95% utilizando a variância bootstrap ### 
+mod1<-survreg(Surv(tempos,cens)~1,dist='lognorm', data=data)
+mu<-mod1$coef[1]; sigma<-mod1$scale
+tm<-as.numeric(exp(mu+(sigma^2/2)))
+li<-tm-1.96*sqrt(var(tmb)); ls<-tm+1.96*sqrt(var(tmb))
+cbind(tm, li, ls) 
+```
+
+```{r}
+### I.C.(tm)_95% Percentil ### 
+#
+tmb_ord<-sort(tmb)
+inf<-tmb_ord[0.025*5000]
+sup<-tmb_ord[0.975*5000]
+cbind(tm, inf, sup)
+```
+
+```{r}
+# =============================================================================
+[B] Obtenção de var(tm) usando reamostragem bootstrap - Modelo Weibull 
+# =============================================================================
+#
+tempos<-c(3,5,6,7,8,9,10,10,12,15,15,18,19,20,22,25,28,30,40,45)
+cens<-c(1,1,1,1,1,1,1,0,1,1,0,1,1,1,1,1,1,1,1,0)
+data<-as.data.frame(cbind(tempos,cens))
+# 
+d<-5000                             # numero de reamostragens bootstrap
+n<-length(tempos)                   # n = tamanho amostral 
+tmb<-matrix(0,d,1)                 # tempos médios das d reamostragens 
+for(j in 1:d){
+  row<-sample(n, replace=T)        # reamostragem com reposição      
+  dados<-data[row,]
+  mod<-survreg(Surv(tempos,cens)~1,dist='weibull', data=dados)
+  a<-exp(mod$coef[1]) 
+  g<-1/mod$scale 
+  tmb[j]<-a*gamma(1+1/g)
+}
+var(tmb)                           # variância bootstrap
+hist(tmb, breaks=20)
+```
+
+
+```{r}
+### I.C.(tm)_95% utilizando a variância bootstrap ### 
+mod1<-survreg(Surv(tempos,cens)~1,dist='weibull', data=data)
+a<-exp(mod$coef[1]); g<-1/mod$scale 
+tm<-as.numeric(a*gamma(1+1/g))
+li<-tm-1.96*sqrt(var(tmb)); ls<-tm+1.96*sqrt(var(tmb))
+cbind(tm, li, ls) 
+```
+
+```{r}
+# =============================================================================
+# Analogamente, a variância do tempo mediano também pode ser obtida por meio de 
+# reamostragem bootstrap como segue.  
+# =============================================================================  
+#
+# [A] Obtenção de var(tmed) usando reamostragem bootstrap - Modelo lognormal  
+# =============================================================================  
+tempos<-c(3,5,6,7,8,9,10,10,12,15,15,18,19,20,22,25,28,30,40,45)
+cens<-c(1,1,1,1,1,1,1,0,1,1,0,1,1,1,1,1,1,1,1,0)
+data<-as.data.frame(cbind(tempos,cens)) 
+d<-5000                        # numero de reamostragens bootstrap
+n<-length(tempos)              # n = tamanho amostral 
+tmd<-matrix(0,d,1)            # tempos medianos das reamostragens 
+for(j in 1:d){
+  row<-sample(n, replace=T)   # reamostragem com reposição      
+  dados<-data[row,]
+  mod<-survreg(Surv(tempos,cens)~1,dist='lognorm', data=dados)
+  tmd[j]<-exp(mod$coef[1])
+}
+v<-var(tmd); v		# variância bootstrap
+hist(tmd, breaks=20)          
+```
+
+```{r}
+#  ### I.C.(tmed)_95% utilizando a variância bootstrap ### 
+mod1<-survreg(Surv(tempos,cens)~1,dist='lognorm', data=data)
+tmed<-as.numeric(exp(mod1$coef[1]))
+li<-tmed-1.96*sqrt(v); ls<-tmed+1.96*sqrt(v)
+cbind(tmed, li, ls) 
+```
+
+```{r}
+### I.C.(tm)_95% Percentil ### 
+#
+tmd_ord<-sort(tmd)
+infd<-tmd_ord[0.025*5000]
+supd<-tmd_ord[0.975*5000]
+cbind(tmed, infd, supd)
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
