--- a/R/survival-analysis.Rmd
+++ b/R/survival-analysis.Rmd
@@ -370,6 +370,775 @@ cbind(tmed, infd, supd)
 ```
 
 
+*Códigos em R apresentados no Capítulo 4*
+
+
+```{r}
+# ##############################################
+# Dados sem Censura
+# Leucemia (Feigl e Zelen, 1965)
+# Livro: Cox e Snell (1981), p. 148
+# Y:tempo do diagnóstico até a morte (em semanas)
+# X: log10(contagem de células brancas no diagnóstico)
+# n=17
+# Objetivo: descrever a relação entre Y e X
+#
+temp<-c(65,156,100,134,16,108,121,4,39,143,56,26,22,1,1,5,65)
+cens<-rep(1,17)
+lwbc<-c(3.36,2.88,3.63,3.41,3.78,4.02,4.00,4.23,3.73,3.85,3.97,
+        4.51,4.54,5.00,5.00,4.72,5.00)
+dados<-cbind(temp,cens,lwbc)
+plot(lwbc,temp,xlab="log10 leucócitos", ylab="tempo até a morte")
+```
+
+```{r}
+require(survival)
+dados<-as.data.frame(dados)
+i<-order(dados$temp)
+dados<-dados[i,]
+ekm<- survfit(Surv(dados$temp,dados$cens)~1)
+summary(ekm)
+```
+
+
+```{r}
+st<-ekm$surv
+temp<-ekm$time
+invst<-qnorm(st)
+par(mfrow=c(1,3))
+plot(temp, -log(st),pch=16,xlab="Tempos",ylab="-log(S(t))")
+plot(log(temp),log(-log(st)),pch=16,xlab="log(tempos)",ylab="log(-log(S(t))")
+plot(log(temp),invst,pch=16,xlab="log(tempos)",ylab=expression(Phi^-1*(S(t))))
+```
+
+```{r}
+ajust1<-survreg(Surv(dados$temp, dados$cens)~dados$lwbc, dist='exponential')
+ajust1
+```
+
+```{r}
+ajust1$loglik
+```
+
+```{r}
+ajust2<-survreg(Surv(dados$temp, dados$cens)~dados$lwbc, dist='weibull')
+ajust2
+```
+
+```{r}
+ajust2$loglik
+```
+
+```{r}
+gama<-1/ajust2$scale
+gama
+```
+
+```{r}
+ajust3<-survreg(Surv(dados$temp, dados$cens)~dados$lwbc, dist='lognorm')
+ajust3
+```
+```{r}
+ajust3$loglik
+```{r}
+
+```{r}
+# =============================================================================
+#  Gama generalizada: ajuste usando pacote "flexsurv" do software R
+#  Obs: necessário instalar o pacote flexsurv
+# =============================================================================
+require(flexsurv)
+ajust4<-flexsurvreg(Surv(dados$temp, dados$cens)~dados$lwbc,dist='gengamma')
+ajust4
+```
+
+```{r}
+ajust4$loglik
+```
+
+
+```{r}
+#  Resíduos Padronizados
+#
+res_ev<-log(dados$temp)-ajust1$linear.predictors
+res<-exp(res_ev)
+ekm <- survfit(Surv(res,dados$cens)~1,type=c("kaplan-meier"))
+par(mfrow=c(1,2))
+plot(ekm, conf.int=F,lty=c(1,1),xlab="resíduos",ylab="S(e) estimada")
+res<-sort(res)
+exp1<-exp(-res)
+lines(res,exp1,lty=3)
+legend(2,0.8,lty=c(1,3),c("Kaplan-Meier","Exponencial(1)"),lwd=1,bty="n",cex=0.7)
+#
+st<-ekm$surv
+t<-ekm$time
+sexp1<-exp(-t)
+plot(st,sexp1,xlab="S(e) - Kaplan-Meier", ylab= "S(e) - Exponencial(1)",pch=16)
+```
+
+
+```{r}
+#===================================================================================
+# Banco do Desmame (Eugênio e Cláudia)
+#
+desmame<-read.table("/Users/f.clesio/Downloads/desmame.txt",h=T)  # desmame.txt no Apêndice A3
+attach(desmame)
+dim(desmame)
+require(survival)
+ekm<- survfit(Surv(tempo,cens)~V4,data=desmame)
+summary(ekm)
+```
+
+
+```{r}
+survdiff(Surv(tempo,cens)~V4,rho=0,data=desmame)
+```
+
+```{r}
+plot(ekm,lty=c(1,4),mark.time=F,xlab="Tempo até o desmame (meses)",ylab="S(t)")
+text(18.5,0.93,c("Dificuldades para Amamentar"),bty="n", cex=0.85)
+legend(15.5,0.9,lty=c(4),c("Sim"),bty="n",cex=0.8)
+legend(18.5,0.9,lty=c(1),c("Não"),bty="n",cex=0.8)
+```
+
+
+```{r}
+ajust1<-survreg(Surv(tempo,cens)~V1+V3+V4+V6, dist='lognorm',data=desmame)
+ajust1
+```
+
+```{r}
+summary(ajust1)
+```
+
+```{r}
+xb<-ajust1$coefficients[1]+ajust1$coefficients[2]*V1+ajust1$coefficients[3]*V3+
+  ajust1$coefficients[4]*V4+ ajust1$coefficients[5]*V6
+sigma<-ajust1$scale
+res<-(log(tempo)-(xb))/sigma                   # resíduos padronizados
+resid<-exp(res)                                # exponencial dos resíduos padronizados
+ekm<- survfit(Surv(resid,cens)~1,data=desmame)
+resid<-ekm$time
+sln<-pnorm(-log(resid))
+par(mfrow=c(1,2))
+plot(ekm$surv,sln, xlab="S(ei*): Kaplan-Meier",ylab="S(ei*): Log-normal padrão",pch=16)
+plot(ekm,conf.int=F,mark.time=F,xlab="Resíduos (ei*)",ylab="Sobrevivência estimada",pch=16)
+lines(resid,sln,lty=2)
+legend(1.3,0.8,lty=c(1,2),c("Kaplan-Meier","Log-normal padrão"),cex=0.8,bty="n")
+```
+
+
+```{r}
+ei<- -log(1-pnorm(res))                          # resíduos de Cox-Snell
+ekm1<-survfit(Surv(ei,cens)~1,data=desmame)
+t<-ekm1$time
+st<-ekm1$surv
+sexp<-exp(-t)
+par(mfrow=c(1,2))
+plot(st,sexp,xlab="S(ei): Kaplan-Meier",ylab="S(ei): Exponencial padrão",pch=16)
+plot(ekm1,conf.int=F,mark.time=F, xlab="Resíduos de Cox-Snell", ylab="Sobrevivência estimada")
+lines(t,sexp,lty=4)
+legend(1.0,0.8,lty=c(1,4),c("Kaplan-Meier","Exponencial padrão"),cex=0.8,bty="n")
+```
+
+
+*Códigos em R apresentados no Capítulo 5*
+
+```{r}
+#   Câncer de Laringe
+laringe<-read.table("/Users/f.clesio/Downloads/laringe.txt", h=T)     #Obs: laringe.txt no Apêndice A6
+```
+
+```{r}
+head(laringe)
+```
+
+```{r}
+names(laringe)
+```
+
+```{r}
+dim(laringe)
+```
+
+```{r}
+laringe$estagio<-factor(laringe$estagio) 
+```
+
+```{r}
+laringe$idade<-as.numeric(laringe$idade)
+```
+
+
+```{r}
+round(table(laringe$estagio)/90,2)
+```
+
+
+```{r}
+boxplot(laringe$idade)
+```
+
+```{r}
+hist(laringe$idade)
+```
+
+```{r}
+summary(laringe$idade)
+```
+
+```{r}
+# attach(laringe)
+require(survival)
+sum(laringe$cens)
+```
+
+
+```{r}
+# Avaliar o comportamento individual de estadio e idade
+ekm<- survfit(Surv(tempos,cens)~estagio, data=laringe)
+summary(ekm)
+```
+
+```{r}
+plot(ekm, lty=c(2,1,3,4), xlab="Tempo (anos)",ylab="S(t) estimada")
+legend(8,0.9,lty=c(2,1,3,4),c("Estadio 1","Estadio 2","Estadio 3","Estadio 4"),lwd=1, bty="n")
+```
+
+
+```{r}
+survdiff(Surv(tempos,cens)~estagio, data=laringe)
+```
+
+```{r}
+# Avaliar o comportamento de idade
+install.packages("rms") # Not working
+require(rms)
+fit1<-cph(Surv(tempos,cens)~rcs(idade,4), data=laringe, x=T,y=T) # pag. 490 Harrell
+fit1
+```
+
+
+```{r}
+#  Estudando colinearidade Estadio e Idade
+boxplot(laringe$idade~laringe$estagio)
+```
+
+```{r}
+summary(aov(idade ~ factor(estagio), data = laringe))
+```
+
+
+```{r}
+fit2<-coxph(Surv(tempos,cens)~factor(estagio), data=laringe,
+            x = T, method="breslow")
+summary(fit2)
+```
+
+```{r}
+fit2$loglik
+```
+
+
+```{r}
+# Utilizando idade com duas inclinações em idade=70
+idade1<-ifelse(laringe$idade>70,0,laringe$idade)
+idade1
+idade<- laringe$idade
+#
+fit3<- coxph(Surv(tempos,cens)~idade+idade1, data=laringe,
+             x = T, method="breslow")
+summary(fit3)
+```
+
+```{r}
+# Não é necessário incluir idade em uma escala diferente da linear
+fit4<- coxph(Surv(tempos,cens)~factor(estagio)+ idade, data=laringe,
+             x = T, method="breslow")
+summary(fit4)
+```
+
+```{r}
+fit4$loglik
+```
+
+```{r}
+fit5<-coxph(Surv(tempos,cens) ~ factor(estagio) + idade + factor(estagio):idade,
+            data=laringe, x = T, method="breslow")
+summary(fit5)
+```
+
+```{r}
+fit5$loglik
+```
+
+```{r}
+anova(fit5,fit4)
+```
+```{r}
+anova(fit4,fit2)
+```
+
+```{r}
+resid(fit5,type="scaledsch") # com o termo de interação
+```
+
+```{r}
+cox.zph(fit5, transform="identity")        ### g(t) = t
+```
+
+```{r}
+par(mfrow=c(2,4))
+plot(cox.zph(fit5))
+#
+resid(fit4,type="scaledsch")
+cox.zph(fit4, transform="identity")    # g(t) = t
+par(mfrow=c(1,4))
+plot(cox.zph(fit4))
+```
+
+```
+Ht<-basehaz(fit5,centered=F)
+Ht1<-survfit(fit5)
+tempos<-Ht$time
+H0<-Ht$hazard
+S0<- exp(-H0)
+round(cbind(tempos, S0,H0),digits=5)
+```{r}
+
+
+```{r}
+#  Ajuste final com somente o termo de interação envolvendo Estadio II e idade
+laringe$estagio2<-ifelse(laringe$estagio==2,1,0)
+fit6<- coxph(Surv(tempos,cens)~factor(estagio)+ idade + estagio2:idade, data=laringe,
+             x = T, method="breslow")
+summary(fit6)
+```
+
+
+```{r}
+#  Banco de Desmame
+require(survival)
+desmame<-read.table("/Users/f.clesio/Downloads/desmame.txt",h=T)    #Obs: desmame.txt no Apêndice A3
+attach(desmame)
+fit<-coxph(Surv(tempo,cens)~V1+V3+V4+V6,data=desmame,x = T,method="breslow")
+summary(fit)
+```
+
+
+```{r}
+fit$loglik
+```
+
+```{r}
+resid(fit,type="scaledsch")
+```
+
+```{r}
+cox.zph(fit, transform="identity")     ## g(t) = t
+```
+
+```{r}
+par(mfrow=c(2,2))
+plot(cox.zph(fit))
+```
+
+
+```{r}
+leuc<-read.table("/Users/f.clesio/Downloads/leucemia.txt", h=T)        #Obs: leucemia.txt no Apêndice A1
+attach(leuc)
+idadec<-ifelse(idade>96,1,0)
+leuinic<-ifelse(leuini>75,1,0)
+zpesoc<-ifelse(zpeso>-2,1,0)
+zestc<-ifelse(zest>-2,1,0)
+pasc<-ifelse(pas>0.05,1,0)
+vacc<-ifelse(vac>15,1,0)
+pasc<-ifelse(pas>5,1,0)
+riskc<-ifelse(risk>1.7,1,0)
+r6c<-r6
+leucc<-as.data.frame(cbind(leuinic,tempos,cens,idadec,zpesoc,zestc,pasc,vacc,riskc,r6c))
+detach(leuc)
+attach(leucc)
+require(survival)
+fit<-coxph(Surv(tempos,cens)~leuinic+idadec+zpesoc+zestc+pasc+vacc+riskc+r6c,
+           data=leucc, x = T, method="breslow")
+summary(fit)
+```
+
+
+
+```{r}
+fit3<-coxph(Surv(tempos,cens)~leuinic+idadec+zpesoc+pasc+vacc,data=leucc,x = T,method="breslow")
+summary(fit3)
+```
+
+```{r}
+-2*fit3$loglik[2]
+```
+
+```{r}
+resid(fit3,type="scaledsch")
+```
+
+```{r}
+cox.zph(fit3, transform="identity")   ## g(t) = t
+```
+
+```{r}
+par(mfrow=c(2,3))
+plot(cox.zph(fit3))
+```
+
+```{r}
+par(mfrow=c(1,2))
+rd<-resid(fit3,type="deviance")       # resíduos deviance
+rm<-resid(fit3,type="martingale")     # resíduos martingal
+pl<-fit3$linear.predictors
+plot(pl,rm, xlab="Preditor linear", ylab="Resíduo martingal", pch=16)
+plot(pl,rd,  xlab="Preditor linear", ylab="Resíduo deviance" , pch=16)
+```
+
+```{r}
+par(mfrow=c(2,2))
+dfbetas<-resid(fit3,type="dfbeta")
+plot(leuinic,dfbetas[,1], xlab="Leuini", ylab="Influência para Leuini")
+plot(idadec, dfbetas[,2], xlab="Idade",  ylab="Influência para Idade")
+plot(zpesoc, dfbetas[,3], xlab="Zpeso",  ylab="Influência para Zpeso")
+plot(pasc,   dfbetas[,4], xlab="Pas",    ylab="Influência para Pas")
+plot(vacc,   dfbetas[,5], xlab="Vac",    ylab="Influência para Vac")
+```
+
+
+
+
+*Códigos em R apresentados no Capítulo 6*
+
+```{r}
+aids<-read.table("/Users/f.clesio/Downloads/aids.txt",h=T)             ## Obs: arquivo aids.txt no Apêndice A2
+attach(aids)
+require(survival)
+fit1<-coxph(Surv(ti[ti<tf], tf[ti<tf], cens[ti<tf])~id[ti<tf]+factor(grp)[ti<tf],method="breslow")
+summary(fit1)
+```
+
+```{r}
+leuc<-read.table("/Users/f.clesio/Downloads/leucemia.txt", h=T)        #Obs: leucemia.txt no Apêndice A1
+attach(leuc)
+idadec<-ifelse(idade>96,1,0)
+leuinic<-ifelse(leuini>75,1,0)
+zpesoc<-ifelse(zpeso>-2,1,0)
+zestc<-ifelse(zest>-2,1,0)
+pasc<-ifelse(pas>0.05,1,0)
+vacc<-ifelse(vac>15,1,0)
+pasc<-ifelse(pas>5,1,0)
+riskc<-ifelse(risk>1.7,1,0)
+r6c<-r6
+leucc<-as.data.frame(cbind(leuinic,tempos,cens,idadec,zpesoc,zestc,pasc,vacc,riskc,r6c))
+detach(leuc)
+attach(leucc)
+require(survival)
+fit1<-coxph(Surv(tempos,cens)~idadec+zpesoc+pasc+vacc+strata(leuinic),data=leucc,
+            x = T,method="breslow")
+summary(fit1)
+```
+
+
+
+
+```{r}
+leucc1<-as.data.frame(cbind(tempos[leuinic==0],cens[leuinic==0],idadec[leuinic==0],
+                            zpesoc[leuinic==0],pasc[leuinic==0],vacc[leuinic==0]))
+leucc2<-as.data.frame(cbind(tempos[leuinic==1],cens[leuinic==1],idadec[leuinic==1],
+                            zpesoc[leuinic==1],pasc[leuinic==1],vacc[leuinic==1]))
+```
+
+```{r}
+fit2<-coxph(Surv(V1,V2)~V3+V4+V5+V6,data=leucc1,x = T,method="breslow")
+summary(fit2)
+```
+
+
+```{r}
+fit3<-coxph(Surv(V1,V2)~V3+V4+V5+V6,data=leucc2,x = T,method="breslow")
+summary(fit3)
+```
+
+
+```{r}
+trv<-2*(-fit1$loglik[2]+fit2$loglik[2]+fit3$loglik[2])
+trv
+```
+
+```{r}
+1-pchisq(trv,4)
+```
+
+```{r}
+cox.zph(fit1, transform="identity")   # g(t) = t
+```
+
+
+
+```{r}
+H0<-basehaz(fit1,centered=F)                    # risco acumulado de base
+H0
+```
+
+```{r}
+H01<-as.matrix(H0[1:27,1])                      # risco acumulado de base do estrato 1 (leuinic=0)
+H02<-as.matrix(H0[28:39,1])                     # risco acumulado de base do estrato 2 (leuinic=1)
+tempo1<- H0$time[1:27]                          # tempos do estrato 1
+S01<-exp(-H01)                                  # sobrevivência de base estrato 1
+round(cbind(tempo1,S01,H01),digits=5)           # funções de base estrato 1
+```
+
+```{r}
+tempo2<- H0$time[28:39]                         # tempos do estrato 2
+S02<-exp(-H02)                                  # sobrevivência de base estrato 2
+round(cbind(tempo2,S02,H02),digits=5)           # funções de base estrato 2
+```
+
+
+```{r}
+plot(tempo2,H02,lty=4,type="s",xlab="Tempos",xlim=range(c(0,4)),ylab=expression(Lambda[0]* (t)))
+lines(tempo1,H01,type="s",lty=1)
+legend(0.0,9,lty=c(1,4),c("Leuini < 75000","Leuini > 75000"),lwd=1,bty="n",cex=0.8)
+plot(c(0,tempo1),c(1,S01),lty=1,type="s",xlab="Tempos",xlim=range(c(0,4)),ylab="So(t)")
+lines(c(0,tempo2),c(1,S02),lty=4,type="s")
+legend(2.2,0.9,lty=c(1,4),c("Leuini < 75000","Leuini > 75000"),lwd=1,bty="n",cex=0.8)
+```
+
+
+```{r}
+hg2<-read.table("/Users/f.clesio/Downloads/hg2.txt",h=T)    # arquivo hg2.txt no Apêndice A7
+attach(hg2)
+require(survival)
+fit1<-coxph(Surv(tempos,cens)~factor(raca)+factor(trauma)+factor(recemnas)+
+              factor(renda)+ialtura+factor(trauma)*factor(recemnas),data=hg2,method="breslow")
+summary(fit1)
+```
+
+
+```{r}
+rendac<-ifelse(renda<4,1,2)
+fit2<-coxph(Surv(tempos,cens)~factor(raca)+factor(trauma)+factor(recemnas)+factor(rendac)+
+              ialtura + factor(trauma)*factor(recemnas),data=hg2,method="breslow")
+summary(fit2)
+```
+
+```{r}
+cox.zph(fit2, transform="identity")
+```
+
+```{r}
+par(mfrow=c(2,3))
+plot(cox.zph(fit2))
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+*Códigos em R apresentados no Capítulo 8*
+  
+```{r}
+require(survival)
+source("/Users/f.clesio/Downloads/Turnbull.R")        # lendo no R a função Turnbull.R (Apêndice E)
+left<-c(0,1,4,5,5)
+right<-c(5,8,9,8,9)
+dat<-as.data.frame(cbind(left,right))
+attach(dat)
+right[is.na(right)] <- Inf
+tau <- cria.tau(dat)
+p <- S.ini(tau=tau)
+A <- cria.A(data=dat,tau=tau)
+tb <- Turnbull(p,A,dat)
+```
+
+
+```{r}
+tb
+```
+
+
+```{r}
+require(survival)
+source("/Users/f.clesio/Downloads/Turnbull.R")                     # Turnbull.R no Apêndice E
+dat <- read.table('/Users/f.clesio/Downloads/breast.txt',header=T)    # breast.txt no Apêndice A9
+dat1 <- dat[dat$ther==1,]
+dat1$right[is.na(dat1$right)] <- Inf
+tau <- cria.tau(dat1)
+p <- S.ini(tau=tau)
+A <- cria.A(data=dat1,tau=tau)
+tb1 <- Turnbull(p,A,dat1)
+```
+
+```{r}
+tb1
+```
+
+```{r}
+dat1 <- dat[dat$ther==0,]
+dat1$right[is.na(dat1$right)] <- Inf
+tau <- cria.tau(dat1)
+p <- S.ini(tau=tau)
+A <- cria.A(data=dat1,tau=tau)
+tb2 <- Turnbull(p,A,dat1)
+```
+
+```{r}
+tb2
+```
+
+```{r}
+plot(tb1$time,tb1$surv, lty=1, type = "s", ylim=c(0,1), xlim=c(0,50),
+     xlab="Tempos (meses)",ylab="S(t)")
+lines(tb2$time,tb2$surv,lty=4,type="s")
+legend(1,0.3,lty=c(1,4),c("Radioterapia","Radioterapia + Quimioterapia"),
+       bty="n",cex=0.8)
+```
+
+
+```{r}
+p <-dat$left+((dat$right-dat$left)/2)
+pm <-ifelse(is.finite(p),p,dat$left)
+cens <- ifelse(is.finite(p),1,0)
+ekm<-survfit(Surv(pm,cens)~ther,type=c("kaplan-meier"),data=dat)
+plot(tb1$time,tb1$surv,lty=1,type="s",ylim=c(0,1), xlim=c(0,50),
+     xlab="Tempos (meses)",ylab="S(t)")
+lines(tb2$time,tb2$surv,lty=2,type="s")
+lines(ekm[1]$time,ekm[1]$surv,type="s",lty=3)
+lines(ekm[2]$time,ekm[2]$surv,type="s",lty=3)
+legend(1,0.3,lty=c(1,2), c("Radioterapia","Radioterapia + Quimioterapia"),
+       bty="n",cex=0.8)
+legend(1,0.21,lty=3, "Usando Ponto Médio dos Intervalos", bty="n",cex=0.8)
+```
+
+
+
+
+```{r}
+breast<-read.table("/Users/f.clesio/Downloads/breast.txt", h=T)   #Obs: breast.txt no Apêndice A9
+attach(breast)
+cens1<-ifelse(cens==1,3,0)
+require(survival)
+fit1<-survreg(Surv(left,right,type="interval2")~ther,breast,dist="logistic")
+summary(fit1)
+```
+
+```{r}
+fit2<-survreg(Surv(left,right,type="interval2")~ther,breast,dist="gaussian")
+summary(fit2)
+```
+
+
+```{r}
+t1<-0:45
+b0<-fit1$coefficients[1]
+b1<-fit1$coefficients[2]
+s<- fit1$scale
+a1<- t1-(b0+b1)
+e1<- exp(a1/s)
+st1<-1/(1+e1)
+t2<-1:60
+a2<- t2-(b0)
+e2<- exp(a2/s)
+st2<-1/(1+e2)
+plot(t1,st1,type="l",lty=3,ylim=range(c(0,1)),xlab="Tempos",ylab="Sobrevivencia estimada")
+lines(t2,st2,type="l",lty=3)
+
+
+t1<-0:45
+b0<-fit2$coefficients[1]
+b1<-fit2$coefficients[2]
+s<- fit2$scale
+a1<- t1-(b0+b1)
+st11<- 1-pnorm(a1/s)
+t2<-0:60
+a2<-t2-(b0)
+st22<- 1 -pnorm(a2/s)
+lines(t2,st22,type="l",lty=2)
+lines(t1,st11,type="l",lty=2)
+legend(1,0.2,lty=c(3,2),c("Logística","Gaussiana"),lwd=1,bty="n",cex=0.8) 
+```
+
+
+
+```{r}
+breast<-read.table("/Users/f.clesio/Downloads/breast.txt", h=T)     # breast.txt no apêndice A.9
+attach(breast)
+require(survival)
+require(intcox)            # função intcox disponível em www.r-project.org
+fit1 <- intcox(Surv(left, right, type = "interval2") ~ ther, data = breast)
+summary(fit1)
+```
+
+
+```{r}
+mang<-read.table("/Users/f.clesio/Downloads/mang.txt",h=T)     #Obs: mang.txt no Apêndice A5
+attach(mang)
+require(survival)
+ekm<-survfit(Surv(ti,cens),conf.type="none")
+summary(ekm)
+```
+
+```{r}
+mang1<-read.table("/Users/f.clesio/Downloads/dadmang.txt",h=T)  #Obs: ver como obter dadmang.txt no Apêndice A5
+attach(mang1)
+require(survival)
+fit1<-glm(y~-1+int1+int2+int3+int4+int5+int6+int7+int8+int9+int10+int11+int12+
+            factor(bloco,levels=5:1)+ factor(copa)+ factor(cavalo)+
+            factor(copa)*factor(cavalo),family=binomial(link="cloglog"))
+anova(fit1)
+```
+
+
+```{r}
+fit2 <-glm(y~-1+int1+int2+int3+int4+int5+int6+int7+int8+int9+int10+int11+int12+
+             factor(bloco,levels=5:1)+ factor(copa)+ factor(cavalo)+
+             factor(copa)*factor(cavalo),family=binomial(link="logit"))
+anova(fit2)
+```
+
+
+```{r}
+fit1<-glm(y~-1+int1+int2+int3+int4+int5+int6+int7+int8+int9+int10+
+            int11+int12+factor(bloco,levels=5:1)+factor(copa),
+          family=binomial(link="cloglog"))
+summary(fit1)
+```{r}
+
+
+```{r}
+fit2<-glm(y~-1+int1+int2+int3+int4+int5+int6+int7+int8+int9+int10+
+            int11+int12+factor(bloco,levels=5:1)+factor(copa),
+          family=binomial(link="logit"))
+summary(fit2)
+```
+
+
+
+
+
+
+
+
+
+
+
 
 
 
